--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "marco pablo demaio",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "sequelize": "^6.14.1"
   }
