--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "author": "marco pablo demaio",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
+    "redux-thunk": "^2.4.1",
     "sequelize": "^6.14.1"
   }
 }
