--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "sequelize": "^6.14.1"
   },
   "engines": {
-    "node": "16.x"
+    "node": "16.x",
+    "npm": "6.x",
+    "yarn": "1.x"
+    
   }
 }
